Add docs and improve handler
